<resources>
    <string name="app_name">Lasertag</string>
    <string name="player_button">Player</string>
    <string name="addedUSB">Устройство подключено</string>
    <string name="SaveButton">SAVE</string>
    <string name="Respawn">RESPAWN</string>
    <string name="Kill">KILL</string>
    <string name="ClearButton">CLEAR</string>
    <string name="channel">Channel</string>
    <string name="power">Power</string>
    <string name="test">Test</string>
    <string name="tvAppendText" />
    <string name="addPlayer">addPlayer</string>
    <string name="players">To Players</string>
    <string name="textMiles2Id">МАЙЛС 2 ID</string>
    <string name="textArmaxId">ARMAX ID</string>
    <string name="textProtocolMiles2">Протокол МАЙЛС 2</string>
    <string name="textTeam">Команда</string>
    <string name="textGameSession">Сеанс игры</string>
    <string name="textBackLight">Фоновый свет</string>
    <string name="textAutoReload">Автоперезарядка</string>
    <string name="textVolume">Громкость звука</string>
</resources>