<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="450dp"
    android:layout_height="240dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Miles2Id"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textMiles2Id"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textMiles2Id"
            android:textSize="8.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/plusMiles2Id"
            android:layout_width="28dp"
            android:layout_height="35dp"
            android:layout_marginEnd="27dp"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            android:text="+"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/okMiles"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toEndOf="@+id/textIteratorMiles"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textIteratorMiles"
            android:layout_width="15pt"
            android:layout_height="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plusMiles2Id"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/minusMiles2Id"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/minusMiles2Id"
            android:layout_width="33dp"
            android:layout_height="44dp"
            android:layout_marginStart="116dp"
            android:text="-"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textMiles2Id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/okMiles"
            android:layout_width="57dp"
            android:layout_height="29dp"
            android:layout_marginEnd="16dp"
            android:padding="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@android:string/ok"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ProtocolMiles2"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArmaxId">

        <Button
            android:id="@+id/buttonProtocolMiles2"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/okIrProtocol"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textProtocolMiles2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/okIrProtocol"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textProtocolMiles2"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textProtocolMiles2"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/GameSession"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Team">

        <Button
            android:id="@+id/okGameSession"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textGameSession"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textGameSession"
            android:textSize="8.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BackLight"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameSession">

        <Button
            android:id="@+id/okBackLight"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textBackLight"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textBackLight"
            android:textSize="8.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AutoReload"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackLight">

        <Button
            android:id="@+id/okAutoReload"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAutoReload"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textAutoReload"
            android:textSize="8.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Volume"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:layout_marginBottom="27dp"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AutoReload"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/okVolume"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textVolume"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textVolume"
            android:textSize="8.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Team"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProtocolMiles2">

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/Yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/okTeam"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yellowButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#3F51B5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/greenButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.636" />

        <Button
            android:id="@+id/redButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="82dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#F44336"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/blueButton"
            app:layout_constraintHorizontal_bias="0.841"
            app:layout_constraintStart_toEndOf="@+id/textTeam"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/okTeam"
            android:layout_width="57dp"
            android:layout_height="29dp"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTeam"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textTeam"
            android:textSize="8.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ArmaxId"
        android:layout_width="451dp"
        android:layout_height="29dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Miles2Id">

        <Button
            android:id="@+id/minusArmax"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="116dp"
            android:text="-"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textArmaxId"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />

        <Button
            android:id="@+id/plusArmax"
            android:layout_width="28dp"
            android:layout_height="35dp"
            android:layout_marginEnd="27dp"
            android:text="+"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/okArmax"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515" />

        <TextView
            android:id="@+id/textIteratorArmax"
            android:layout_width="15pt"
            android:layout_height="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plusArmax"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toEndOf="@+id/minusArmax"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/okArmax"
            android:layout_width="57dp"
            android:layout_height="29dp"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textArmaxId"
            android:layout_width="40pt"
            android:layout_height="22.5dp"
            android:text="@string/textArmaxId"
            android:textSize="8.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>