<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RecievingRadioPackage">

    <TextView
        android:id="@+id/tvAppendText"
        android:layout_width="250dp"
        android:layout_height="118dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="444dp"
        android:layout_marginBottom="62dp"
        android:text="@string/tvAppendText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listPlayers" />

    <ListView
        android:id="@+id/listPlayers"
        android:layout_width="250dp"
        android:layout_height="146dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAppendText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <Button
        android:id="@+id/addPlayer"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="44dp"
        android:onClick="addPlayer"
        android:text="@string/addPlayer"
        app:layout_constraintStart_toEndOf="@+id/listPlayers"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="99dp"
        android:onClick="myPlayer"
        android:text="mY PlAyer"
        app:layout_constraintBottom_toTopOf="@+id/tvAppendText"
        app:layout_constraintEnd_toStartOf="@+id/playerSettingsView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listPlayers"
        app:layout_constraintVertical_bias="0.59" />

    <ScrollView
        android:id="@+id/playerSettingsView"
        android:layout_width="425dp"
        android:layout_height="253dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="420dp"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/Miles2Id"
                    android:layout_width="421dp"
                    android:layout_height="88dp"
                    android:padding="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textMiles2Id"
                        android:layout_width="40pt"
                        android:layout_height="22.5dp"
                        android:text="@string/textMiles2Id"
                        android:textSize="8.5sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/plusMiles2Id"
                        android:layout_width="28dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="20dp"
                        android:paddingHorizontal="0dp"
                        android:paddingVertical="0dp"
                        android:text="+"
                        android:textSize="8sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/okMiles"
                        app:layout_constraintHorizontal_bias="0.86"
                        app:layout_constraintStart_toEndOf="@+id/textIteratorMiles"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textIteratorMiles"
                        android:layout_width="40dp"
                        android:layout_height="26dp"
                        android:text='12'
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/plusMiles2Id"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/minusMiles2Id"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/minusMiles2Id"
                        android:layout_width="33dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="90dp"
                        android:text="-"
                        android:textSize="8sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textMiles2Id"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <Button
                        android:id="@+id/okMiles"
                        android:layout_width="57dp"
                        android:layout_height="29dp"
                        android:layout_marginEnd="16dp"
                        android:padding="0dp"
                        android:paddingTop="0dp"
                        android:paddingBottom="0dp"
                        android:text="@android:string/ok"
                        android:textSize="8sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ArmaxId"
                    android:layout_width="421dp"
                    android:layout_height="83dp"
                    android:padding="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Miles2Id">

                    <Button
                        android:id="@+id/minusArmax"
                        android:layout_width="33dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="90dp"
                        android:text="-"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textArmaxId"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <Button
                        android:id="@+id/plusArmax"
                        android:layout_width="28dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="20dp"
                        android:text="+"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/okArmax"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textIteratorArmax"
                        android:layout_width="49dp"
                        android:layout_height="26dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/plusArmax"
                        app:layout_constraintHorizontal_bias="0.482"
                        app:layout_constraintStart_toEndOf="@+id/minusArmax"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.4" />

                    <Button
                        android:id="@+id/okArmax"
                        android:layout_width="57dp"
                        android:layout_height="29dp"
                        android:layout_marginEnd="16dp"
                        android:text="@android:string/ok"
                        android:textSize="8sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textArmaxId"
                        android:layout_width="40pt"
                        android:layout_height="22.5dp"
                        android:text="@string/textArmaxId"
                        android:textSize="8.5sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>